removed console utils;

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,8 +7,10 @@ project(projects CXX)
 ################################################################################
 # Set target arch type if empty. Visual studio solution generator provides it.
 ################################################################################
+set(CMAKE_GENERATOR_PLATFORM x86)
+
 if(NOT CMAKE_VS_PLATFORM_NAME)
-    set(CMAKE_VS_PLATFORM_NAME "x64")
+    set(CMAKE_VS_PLATFORM_NAME "x86")
 endif()
 message("${CMAKE_VS_PLATFORM_NAME} architecture in use")
 
